Kubernetes/Lab5/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginxservice
  namespace: nginx-ns
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: myport
